# OpenSiv3D-Crossplatform-Build

Siv3D/: CMakeLists.txt
Siv3D/include/Siv3D/: ConcurrentTask.hpp  Format.hpp  Key.hpp  Platform.hpp  PlatformDetail.hpp  Script.hpp  TOMLReader.hpp
Siv3D/src/Siv3D-Platform/WindowsDesktop/: Siv3DMain.cpp
Siv3D/src/Siv3D-Platform/WindowsDesktop/Audio/X27/: AudioDevice_X27 .hpp  Audio_X27.hpp  CAudio_X27.cpp  CAudio_X27.hpp  VoiceStream_X27.hpp
Siv3D/src/Siv3D-Platform/WindowsDesktop/Audio/X27/MinGW/: IXAudio27.hpp
Siv3D/src/Siv3D-Platform/WindowsDesktop/Audio/X28/: AudioDevice_X28 .hpp  Audio_X28.hpp  CAudio_X28.cpp  CAudio_X28.hpp  VoiceStream_X28.hpp
Siv3D/src/Siv3D-Platform/WindowsDesktop/Codec/: CCodec.hpp  MFRenderStream.hpp
Siv3D/src/Siv3D-Platform/WindowsDesktop/DragDrop/: CDragDrop.cpp
Siv3D/src/Siv3D-Platform/WindowsDesktop/FileSystem/: SivFileSystem_Platform.cpp
Siv3D/src/Siv3D-Platform/WindowsDesktop/Graphics/D3D11/: D3D11SwapChain.cpp  D3D11SwapChain.hpp
Siv3D/src/Siv3D-Platform/WindowsDesktop/PowerStatus/: SivPowerStatus.cpp
Siv3D/src/Siv3D-Platform/WindowsDesktop/Process/: ChildProcessDetail.cpp
Siv3D/src/Siv3D-Platform/WindowsDesktop/Renderer2D/D3D11/: CRenderer2D_D3D11.cpp  D3D11Renderer2DCommand.cpp
Siv3D/src/Siv3D-Platform/WindowsDesktop/TextInput/: WindowsIME.cpp  WindowsIME.h
Siv3D/src/Siv3D-Platform/WindowsDesktop/TextInput/MinGW/: .gitignore  README.md  generate_headers_from_idls.sh  msctf.h  msctf.idl.diff
Siv3D/src/Siv3D-Platform/WindowsDesktop/TextReader/: TextReaderDetail_Platform.cpp
Siv3D/src/Siv3D-Platform/WindowsDesktop/TextToSpeech/: CTextToSpeech.cpp
Siv3D/src/Siv3D-Platform/WindowsDesktop/Texture/D3D11/: Texture2DDesc_D3D11.hpp
Siv3D/src/Siv3D-Platform/WindowsDesktop/ToastNotification/: CToastNotification.hpp
Siv3D/src/Siv3D/AnimatedGIFReader/: AnimatedGIFReaderDetail.cpp
Siv3D/src/Siv3D/AnimatedGIFWriter/: GIFWriter.hpp
Siv3D/src/Siv3D/Font/: FontData.cpp
Siv3D/src/Siv3D/Format/: SivFormat.cpp
Siv3D/src/Siv3D/Hash/: SivHash.cpp
Siv3D/src/Siv3D/Interpolation/: SivInterpolation.cpp
Siv3D/src/Siv3D/Texture/: SivTexture.cpp
