cmake_minimum_required (VERSION 3.0)

project(OpenSiv3D CXX)
enable_language(C)

set(SOURCE_FILES_SIV3D
	"src/Siv3D/AABB/SivAABB.cpp"
	"src/Siv3D/AnimatedGIFReader/AnimatedGIFReaderDetail.cpp"
	"src/Siv3D/AnimatedGIFReader/SivAnimatedGIFReader.cpp"	
	"src/Siv3D/AnimatedGIFWriter/AnimatedGIFWriterDetail.cpp"
	"src/Siv3D/AnimatedGIFWriter/SivAnimatedGIFWriter.cpp"
	"src/Siv3D/Asset/AssetFactory.cpp"
	"src/Siv3D/Asset/CAsset.cpp"
	"src/Siv3D/Asset/IAssetDetail.cpp"
	"src/Siv3D/Asset/SivAsset.cpp"
	"src/Siv3D/AssetHandleManager/AssetReport.cpp"
	"src/Siv3D/Audio/Null/CAudio_Null.cpp"
	"src/Siv3D/Audio/SivAudio.cpp"
	"src/Siv3D/AudioAsset/SivAudioAsset.cpp"
	"src/Siv3D/AudioFormat/AudioFormatFactory.cpp"
	"src/Siv3D/AudioFormat/CAudioFormat.cpp"
	"src/Siv3D/AudioFormat/SivAudioFormat.cpp"
	"src/Siv3D/AudioFormat/OggVorbis/AudioFormat_OggVorbis.cpp"
	"src/Siv3D/AudioFormat/WAVE/AudioFormat_WAVE.cpp"
	"src/Siv3D/Base64/SivBase64.cpp"
	"src/Siv3D/Bezier2/SivBezier2.cpp"
	"src/Siv3D/Bezier3/SivBezier3.cpp"
	"src/Siv3D/BigFloat/SivBigFloat.cpp"
	"src/Siv3D/BigInt/SivBigInt.cpp"
	"src/Siv3D/BinaryReader/SivBinaryReader.cpp"
	"src/Siv3D/BinaryWriter/SivBinaryWriter.cpp"
	"src/Siv3D/BlendState/SivBlendState.cpp"
	"src/Siv3D/BoolArray/SivBoolArray.cpp"
	"src/Siv3D/Byte/SivByte.cpp"
	"src/Siv3D/ByteArray/ByteArrayDetail.cpp"
	"src/Siv3D/ByteArray/SivByteArray.cpp"
	"src/Siv3D/ByteArrayView/SivByteArrayView.cpp"
	"src/Siv3D/CPU/CCPU.cpp"
	"src/Siv3D/CPU/CPUFactory.cpp"
	"src/Siv3D/CPU/SivCPU.cpp"
	"src/Siv3D/CSVData/SivCSVData.cpp"
	"src/Siv3D/Camera2D/SivCamera2D.cpp"
	"src/Siv3D/Camera3D/SivCamera3D.cpp"
	"src/Siv3D/Circle/SivCircle.cpp"
	"src/Siv3D/Clipboard/ClipboardFactory.cpp"
	"src/Siv3D/Clipboard/SivClipboard.cpp"
	"src/Siv3D/Codec/CodecFactory.cpp"
	"src/Siv3D/Color/SivColor.cpp"
	"src/Siv3D/Compression/SivCompression.cpp"
	"src/Siv3D/Console/ConsoleFactory.cpp"
	"src/Siv3D/Console/SivConsole.cpp"
	"src/Siv3D/Cursor/CursorFactory.cpp"
	"src/Siv3D/Cursor/SivCursor.cpp"
	"src/Siv3D/CustomStopwatch/SivCustomStopwatch.cpp"
	"src/Siv3D/Cylindrical/SivCylindrical.cpp"
	"src/Siv3D/Date/SivDate.cpp"
	"src/Siv3D/DateTime/SivDateTime.cpp"
	"src/Siv3D/DeadZone/SivDeadZone.cpp"
	"src/Siv3D/DefaultRNG/SivDefaultRNG.cpp"
	"src/Siv3D/Dialog/SivDialog.cpp"
	"src/Siv3D/DirectoryWatcher/SivDirectoryWatcher.cpp"
	"src/Siv3D/Distribution/SivDistribution.cpp"
	"src/Siv3D/DragDrop/DragDropFactory.cpp"
	"src/Siv3D/DragDrop/SivDragDrop.cpp"
	"src/Siv3D/Duration/SivDuration.cpp"
	"src/Siv3D/DynamicTexture/SivDynamicTexture.cpp"
	"src/Siv3D/Easing/SivEasing.cpp"
	"src/Siv3D/Effect/CEffect.cpp"
	"src/Siv3D/Effect/EffectData.cpp"
	"src/Siv3D/Effect/EffectFactory.cpp"
	"src/Siv3D/Effect/SivEffect.cpp"
	"src/Siv3D/Ellipse/SivEllipse.cpp"
	"src/Siv3D/Emitter2D/SivEmitter2D.cpp"
	"src/Siv3D/Emoji/SivEmoji.cpp"
	"src/Siv3D/EmojiList/EmojiListDetail.cpp"
	"src/Siv3D/EmojiList/SivEmojiList.cpp"
	"src/Siv3D/EngineDirectory/EngineDirectory.cpp"
	"src/Siv3D/Error/SivError.cpp"
	"src/Siv3D/Exif/SivExif.cpp"
	"src/Siv3D/FFT/CFFT.cpp"
	"src/Siv3D/FFT/FFTFactory.cpp"
	"src/Siv3D/FFT/SivFFT.cpp"
	"src/Siv3D/FileFilter/SivFileFilter.cpp"
	"src/Siv3D/FileSystem/SivFileSystem.cpp"
	"src/Siv3D/Font/CFont.cpp"
	"src/Siv3D/Font/FontFace.cpp"
	"src/Siv3D/Font/FontFactory.cpp"
	"src/Siv3D/Font/SivFont.cpp"
	"src/Siv3D/Font/FontData.cpp"
	"src/Siv3D/FontAsset/SivFontAsset.cpp"
	"src/Siv3D/Format/SivFormat.cpp"
	"src/Siv3D/FormatFloat/SivFormatFloat.cpp"
	"src/Siv3D/FormatInt/SivFormatInt.cpp"
	"src/Siv3D/FormatLiteral/SivFormatLiteral.cpp"
	"src/Siv3D/FormatUtility/SivFormatUtility.cpp"
	"src/Siv3D/GUI/CGUI.cpp"
	"src/Siv3D/GUI/GUIFactory.cpp"
	"src/Siv3D/Gamepad/GamepadFactory.cpp"
	"src/Siv3D/Gamepad/SivGamepad.cpp"
	"src/Siv3D/Geometry2D/SivGeometry2D.cpp"
	"src/Siv3D/Graphics/SivGraphics.cpp"
	"src/Siv3D/Graphics2D/SivGraphics2D.cpp"
	"src/Siv3D/HSV/SivHSV.cpp"
	"src/Siv3D/HTMLWriter/HTMLWriterDetail.cpp"
	"src/Siv3D/HTMLWriter/SivHTMLWriter.cpp"
	"src/Siv3D/HalfFloat/SivHalfFloat.cpp"
	"src/Siv3D/Hash/SivHash.cpp"
	"src/Siv3D/INIData/SivINIData.cpp"
	"src/Siv3D/IPv4/SivIPv4.cpp"
	"src/Siv3D/Icon/SivIcon.cpp"
	"src/Siv3D/Image/SivImage.cpp"
	"src/Siv3D/ImageFormat/BMP/ImageFormat_BMP.cpp"
	"src/Siv3D/ImageFormat/CImageFormat.cpp"
	"src/Siv3D/ImageFormat/GIF/ImageFormat_GIF.cpp"
	"src/Siv3D/ImageFormat/ImageFormatFactory.cpp"
	"src/Siv3D/ImageFormat/JPEG/ImageFormat_JPEG.cpp"
	"src/Siv3D/ImageFormat/PNG/ImageFormat_PNG.cpp"
	"src/Siv3D/ImageFormat/PPM/ImageFormat_PPM.cpp"
	"src/Siv3D/ImageFormat/SivImageFormat.cpp"
	"src/Siv3D/ImageFormat/TGA/ImageFormat_TGA.cpp"
	"src/Siv3D/ImageFormat/WebP/ImageFormat_WebP.cpp"
	"src/Siv3D/ImageProcessing/SivImageProcessing.cpp"
	"src/Siv3D/Interpolation/SivInterpolation.cpp"
	"src/Siv3D/JSONReader/SivJSONReader.cpp"
	"src/Siv3D/JSONWriter/SivJSONWriter.cpp"
	"src/Siv3D/JoyCon/SivJoyCon.cpp"
	"src/Siv3D/Key/SivKey.cpp"
	"src/Siv3D/KeyConjunction/SivKeyConjunction.cpp"
	"src/Siv3D/KeyGroup/SivKeyGroup.cpp"
	"src/Siv3D/Keyboard/KeyboardFactory.cpp"
	"src/Siv3D/LicenseManager/CLicenseManager.cpp"
	"src/Siv3D/LicenseManager/LicenseManagerFactory.cpp"
	"src/Siv3D/LicenseManager/SivLicenseManager.cpp"
	"src/Siv3D/Line/SivLine.cpp"
	"src/Siv3D/Line3D/SivLine3D.cpp"
	"src/Siv3D/LineString/SivLineString.cpp"
	"src/Siv3D/Logger/LoggerFactory.cpp"
	"src/Siv3D/Logger/SivLogger.cpp"
	"src/Siv3D/MD5/SivMD5.cpp"
	"src/Siv3D/MSRenderTexture/SivMSRenderTexture.cpp"
	"src/Siv3D/ManagedScript/ManagedScriptDetail.cpp"
	"src/Siv3D/ManagedScript/SivManagedScript.cpp"
	"src/Siv3D/Mat3x2/SivMat3x2.cpp"
	"src/Siv3D/Mat4x4/SivMat4x4.cpp"
	"src/Siv3D/Math/SivMath.cpp"
	"src/Siv3D/MathParser/MathParserDetail.cpp"
	"src/Siv3D/MathParser/SivMathParser.cpp"
	"src/Siv3D/MemoryMapping/SivMemoryMapping.cpp"
	"src/Siv3D/MemoryWriter/MemoryWriterDetail.cpp"
	"src/Siv3D/MemoryWriter/SivMemoryWriter.cpp"
	"src/Siv3D/MersenneTwister/SivMersenneTwister.cpp"
	"src/Siv3D/Microphone/SivMicrophone.cpp"
	"src/Siv3D/Mouse/MouseFactory.cpp"
	"src/Siv3D/Mouse/SivMouse.cpp"
	"src/Siv3D/MultiPolygon/SivMultiPolygon.cpp"
	"src/Siv3D/NavMesh/NavMeshDetail.cpp"
	"src/Siv3D/NavMesh/SivNavMesh.cpp"
	"src/Siv3D/Network/NetworkFactory.cpp"
	"src/Siv3D/Network/SivNetwork.cpp"
	"src/Siv3D/NoiseGenerator/NoiseGeneratorDetail.cpp"
	"src/Siv3D/NoiseGenerator/SivNoiseGenerator.cpp"
	"src/Siv3D/OBB/SivOBB.cpp"
	"src/Siv3D/ObjectDetection/CObjectDetection.cpp"
	"src/Siv3D/ObjectDetection/ObjectDetectionFactory.cpp"
	"src/Siv3D/OpenCV_Bridge/SivOpenCV_Bridge.cpp"
	"src/Siv3D/OutlineGlyph/SivOutlineGlyph.cpp"
	"src/Siv3D/Painting/PaintShape.cpp"
	"src/Siv3D/Painting/SivPainting.cpp"
	"src/Siv3D/Parse/SivParse.cpp"
	"src/Siv3D/ParseBool/SivParseBool.cpp"
	"src/Siv3D/ParseFloat/SivParseFloat.cpp"
	"src/Siv3D/ParseInt/SivParseInt.cpp"
	"src/Siv3D/Particle2D/SivParticle2D.cpp"
	"src/Siv3D/ParticleSystem2D/ParticleSystem2DDetail.cpp"
	"src/Siv3D/ParticleSystem2D/SivParticleSystem2D.cpp"
	"src/Siv3D/PerlinNoise/SivPerlinNoise.cpp"
	"src/Siv3D/Physics2D/P2BodyDetail.cpp"
	"src/Siv3D/Physics2D/P2ContactListner.cpp"
	"src/Siv3D/Physics2D/P2DistanceJointDetail.cpp"
	"src/Siv3D/Physics2D/P2PivotJointDetail.cpp"
	"src/Siv3D/Physics2D/P2RopeJointDetail.cpp"
	"src/Siv3D/Physics2D/P2SliderJointDetail.cpp"
	"src/Siv3D/Physics2D/P2WheelJointDetail.cpp"
	"src/Siv3D/Physics2D/P2WorldDetail.cpp"
	"src/Siv3D/Physics2D/SivPhysics2D.cpp"
	"src/Siv3D/PixelShader/SivPixelShader.cpp"
	"src/Siv3D/Point/SivPoint.cpp"
	"src/Siv3D/PoissonDisk2D/SivPoissonDisk2D.cpp"
	"src/Siv3D/Polygon/PolygonDetail.cpp"
	"src/Siv3D/Polygon/SivPolygon.cpp"
	"src/Siv3D/Print/CPrint.cpp"
	"src/Siv3D/Print/PrintFactory.cpp"
	"src/Siv3D/Print/SivPrint.cpp"
	"src/Siv3D/ProController/SivProController.cpp"
	"src/Siv3D/Profiler/CProfiler.cpp"
	"src/Siv3D/Profiler/ProfilerFactory.cpp"
	"src/Siv3D/Profiler/SivProfiler.cpp"
	"src/Siv3D/Process/SivProcess.cpp"
	"src/Siv3D/QR/QRDecoderDetail.cpp"
	"src/Siv3D/QR/SivQR.cpp"
	"src/Siv3D/Quad/SivQuad.cpp"
	"src/Siv3D/Quaternion/SivQuaternion.cpp"
	"src/Siv3D/RNG/SivRNG.cpp"
	"src/Siv3D/Random/SivRandom.cpp"
	"src/Siv3D/Ray/SivRay.cpp"
	"src/Siv3D/RasterizerState/SivRasterizerState.cpp"
	"src/Siv3D/Rectangle/SivRectangle.cpp"
	"src/Siv3D/RectanglePacking/SivRectanglePacking.cpp"
	"src/Siv3D/RenderTexture/SivRenderTexture.cpp"
	"src/Siv3D/Renderer2D/Vertex2DBuilder.cpp"
	"src/Siv3D/RoundRect/SivRoundRect.cpp"
	"src/Siv3D/SDF/SivSDF.cpp"
	"src/Siv3D/SDFFont/CSDFFont.cpp"
	"src/Siv3D/SDFFont/SDFFontData.cpp"
	"src/Siv3D/SDFFont/SDFFontFactory.cpp"
	"src/Siv3D/SDFFont/SivSDFFont.cpp"
	"src/Siv3D/SFMT/SivSFMT.cpp"
	"src/Siv3D/SIMD_Float4/SivSIMD_Float4.cpp"
	"src/Siv3D/SVM/CSVM.cpp"
	"src/Siv3D/SVM/SivSVM.cpp"
	"src/Siv3D/SamplerState/SivSamplerState.cpp"
	"src/Siv3D/Say/SivSay.cpp"
	"src/Siv3D/Scene/SivScene.cpp"
	"src/Siv3D/ScopedColor2D/SivScopedColor2D.cpp"
	"src/Siv3D/ScopedCustomShader2D/SivScopedCustomShader2D.cpp"
	"src/Siv3D/ScopedRenderStates2D/SivScopedRenderStates2D.cpp"
	"src/Siv3D/ScopedRenderTarget2D/SivScopedRenderTarget2D.cpp"
	"src/Siv3D/ScopedViewport2D/SivScopedViewport2D.cpp"
	"src/Siv3D/ScreenCapture/CScreenCapture.cpp"
	"src/Siv3D/ScreenCapture/ScreenCaptureFactory.cpp"
	"src/Siv3D/ScreenCapture/SivScreenCapture.cpp"
	"src/Siv3D/Script/AngelScript/scriptarray.cpp"
	"src/Siv3D/Script/AngelScript/scriptbuilder.cpp"
	"src/Siv3D/Script/AngelScript/scriptgrid.cpp"
	"src/Siv3D/Script/AngelScript/scriptstdstring.cpp"
	"src/Siv3D/Script/Bind/Script_Audio.cpp"
	"src/Siv3D/Script/Bind/Script_Bezier2.cpp"
	"src/Siv3D/Script/Bind/Script_Bezier3.cpp"
	"src/Siv3D/Script/Bind/Script_Circle.cpp"
	"src/Siv3D/Script/Bind/Script_Circular.cpp"
	"src/Siv3D/Script/Bind/Script_Color.cpp"
	"src/Siv3D/Script/Bind/Script_ColorF.cpp"
	"src/Siv3D/Script/Bind/Script_Cursor.cpp"
	"src/Siv3D/Script/Bind/Script_CustomStopwatch.cpp"
	"src/Siv3D/Script/Bind/Script_Date.cpp"
	"src/Siv3D/Script/Bind/Script_DateTime.cpp"
	"src/Siv3D/Script/Bind/Script_Dialog.cpp"
	"src/Siv3D/Script/Bind/Script_DrawableText.cpp"
	"src/Siv3D/Script/Bind/Script_Duration.cpp"
	"src/Siv3D/Script/Bind/Script_DynamicTexture.cpp"
	"src/Siv3D/Script/Bind/Script_Easing.cpp"
	"src/Siv3D/Script/Bind/Script_Ellipse.cpp"
	"src/Siv3D/Script/Bind/Script_Emoji.cpp"
	"src/Siv3D/Script/Bind/Script_Float2.cpp"
	"src/Siv3D/Script/Bind/Script_FloatRect.cpp"
	"src/Siv3D/Script/Bind/Script_Font.cpp"
	"src/Siv3D/Script/Bind/Script_Format.cpp"
	"src/Siv3D/Script/Bind/Script_Graphics.cpp"
	"src/Siv3D/Script/Bind/Script_HSV.cpp"
	"src/Siv3D/Script/Bind/Script_Icon.cpp"
	"src/Siv3D/Script/Bind/Script_Image.cpp"
	"src/Siv3D/Script/Bind/Script_Line.cpp"
	"src/Siv3D/Script/Bind/Script_LineString.cpp"
	"src/Siv3D/Script/Bind/Script_LineStyle.cpp"
	"src/Siv3D/Script/Bind/Script_Mat3x2.cpp"
	"src/Siv3D/Script/Bind/Script_Math.cpp"
	"src/Siv3D/Script/Bind/Script_MathConstants.cpp"
	"src/Siv3D/Script/Bind/Script_MicrosecClock.cpp"
	"src/Siv3D/Script/Bind/Script_MillisecClock.cpp"
	"src/Siv3D/Script/Bind/Script_Mouse.cpp"
	"src/Siv3D/Script/Bind/Script_NamedArg.cpp"
	"src/Siv3D/Script/Bind/Script_None_t.cpp"
	"src/Siv3D/Script/Bind/Script_OffsetCircular.cpp"
	"src/Siv3D/Script/Bind/Script_Optional.cpp"
	"src/Siv3D/Script/Bind/Script_Palette.cpp"
	"src/Siv3D/Script/Bind/Script_Periodic.cpp"
	"src/Siv3D/Script/Bind/Script_Point.cpp"
	"src/Siv3D/Script/Bind/Script_Polygon.cpp"
	"src/Siv3D/Script/Bind/Script_Print.cpp"
	"src/Siv3D/Script/Bind/Script_Profiler.cpp"
	"src/Siv3D/Script/Bind/Script_Quad.cpp"
	"src/Siv3D/Script/Bind/Script_RDTSCClock.cpp"
	"src/Siv3D/Script/Bind/Script_Random.cpp"
	"src/Siv3D/Script/Bind/Script_Rect.cpp"
	"src/Siv3D/Script/Bind/Script_RectF.cpp"
	"src/Siv3D/Script/Bind/Script_RoundRect.cpp"
	"src/Siv3D/Script/Bind/Script_Say.cpp"
	"src/Siv3D/Script/Bind/Script_Scene.cpp"
	"src/Siv3D/Script/Bind/Script_ScopedViewport2D.cpp"
	"src/Siv3D/Script/Bind/Script_Shape2D.cpp"
	"src/Siv3D/Script/Bind/Script_SoundFont.cpp"
	"src/Siv3D/Script/Bind/Script_Stopwatch.cpp"
	"src/Siv3D/Script/Bind/Script_System.cpp"
	"src/Siv3D/Script/Bind/Script_TextToSpeech.cpp"
	"src/Siv3D/Script/Bind/Script_Texture.cpp"
	"src/Siv3D/Script/Bind/Script_TextureFormat.cpp"
	"src/Siv3D/Script/Bind/Script_TextureRegion.cpp"
	"src/Siv3D/Script/Bind/Script_TexturedCircle.cpp"
	"src/Siv3D/Script/Bind/Script_TexturedQuad.cpp"
	"src/Siv3D/Script/Bind/Script_TexturedRoundRect.cpp"
	"src/Siv3D/Script/Bind/Script_Time.cpp"
	"src/Siv3D/Script/Bind/Script_Timer.cpp"
	"src/Siv3D/Script/Bind/Script_Transformer2D.cpp"
	"src/Siv3D/Script/Bind/Script_Triangle.cpp"
	"src/Siv3D/Script/Bind/Script_Types.cpp"
	"src/Siv3D/Script/Bind/Script_Utility.cpp"
	"src/Siv3D/Script/Bind/Script_Vec2.cpp"
	"src/Siv3D/Script/Bind/Script_Vec3.cpp"
	"src/Siv3D/Script/Bind/Script_Vec4.cpp"
	"src/Siv3D/Script/Bind/Script_Wave.cpp"
	"src/Siv3D/Script/Bind/Script_WaveSample.cpp"
	"src/Siv3D/Script/Bind/Script_Window.cpp"
	"src/Siv3D/Script/Bind/Script_Key.cpp"
	"src/Siv3D/Script/CScript.cpp"
	"src/Siv3D/Script/ScriptData.cpp"
	"src/Siv3D/Script/ScriptFactory.cpp"
	"src/Siv3D/Script/SivScript.cpp"
	"src/Siv3D/Serial/SerialDetail.cpp"
	"src/Siv3D/Serial/SivSerial.cpp"
	"src/Siv3D/Shader/SivShader.cpp"
	"src/Siv3D/Shape2D/SivShape2D.cpp"
	"src/Siv3D/SimpleGUI/SimpleGUI.cpp"
	"src/Siv3D/SimpleGUIManager/SimpleGUIManagerDetail.cpp"
	"src/Siv3D/SimpleGUIManager/SivSimpleGUIManager.cpp"
	"src/Siv3D/Siv3DEngine.cpp"
	"src/Siv3D/SoundFont/CSoundFont.cpp"
	"src/Siv3D/SoundFont/SoundFontFactory.cpp"
	"src/Siv3D/Sphere/SivSphere.cpp"
	"src/Siv3D/Spherical/SivSpherical.cpp"
	"src/Siv3D/Sprite/SivSprite.cpp"
	"src/Siv3D/Step2D/SivStep2D.cpp"
	"src/Siv3D/Stopwatch/SivStopwatch.cpp"
	"src/Siv3D/String/SivString.cpp"
	"src/Siv3D/StringView/SivStringView.cpp"
	"src/Siv3D/Subdivision2D/SivSubdivision2D.cpp"
	"src/Siv3D/System/SystemFactory.cpp"
	"src/Siv3D/System/SivSystem.cpp"
	"src/Siv3D/TCPClient/SivTCPClient.cpp"
	"src/Siv3D/TCPClient/TCPClientDetail.cpp"
	"src/Siv3D/TCPServer/SivTCPServer.cpp"
	"src/Siv3D/TCPServer/TCPServerDetail.cpp"
	"src/Siv3D/TOMLReader/SivTOMLReader.cpp"
	"src/Siv3D/TextBox/SivTextBox.cpp"
	"src/Siv3D/TextBox/TextBoxDetail.cpp"
	"src/Siv3D/TextEncoding/SivTextEncoding.cpp"
	"src/Siv3D/TextInput/SivTextInput.cpp"
	"src/Siv3D/TextInput/TextInputFactory.cpp"
	"src/Siv3D/TextReader/SivTextReader.cpp"
	"src/Siv3D/TextReader/TextReaderDetail.cpp"
	"src/Siv3D/TextToSpeech/SivTextToSpeech.cpp"
	"src/Siv3D/TextToSpeech/TextToSpeechFactory.cpp"
	"src/Siv3D/TextWriter/SivTextWriter.cpp"
	"src/Siv3D/TextWriter/TextWriterDetail.cpp"
	"src/Siv3D/Texture/SivTexture.cpp"
	"src/Siv3D/TextureAsset/SivTextureAsset.cpp"
	"src/Siv3D/TextureDesc/SivTextureDesc.cpp"
	"src/Siv3D/TextureFormat/SivTextureFormat.cpp"
	"src/Siv3D/TextureRegion/SivTextureRegion.cpp"
	"src/Siv3D/TexturedCircle/SivTexturedCircle.cpp"
	"src/Siv3D/TexturedQuad/SivTexturedQuad.cpp"
	"src/Siv3D/TexturedRoundRect/SivTexturedRoundRect.cpp"
	"src/Siv3D/Threading/SivThreading.cpp"
	"src/Siv3D/TimeProfiler/SivTimeProfiler.cpp"
	"src/Siv3D/TimeProfiler/TimeProfilerDetail.cpp"
	"src/Siv3D/Timer/SivTimer.cpp"
	"src/Siv3D/ToastNotification/SivToastNotification.cpp"
	"src/Siv3D/Transformer2D/SivTransformer2D.cpp"
	"src/Siv3D/Transition/SivTransition.cpp"
	"src/Siv3D/Triangle/SivTriangle.cpp"
	"src/Siv3D/Triangle3D/SivTriangle3D.cpp"
	"src/Siv3D/Twitter/SivTwitter.cpp"
	"src/Siv3D/Unicode/SivUnicode.cpp"
	"src/Siv3D/Vector2D/SivVector2D.cpp"
	"src/Siv3D/Vector3D/SivVector3D.cpp"
	"src/Siv3D/Vector4D/SivVector4D.cpp"
	"src/Siv3D/VertexShader/SivVertexShader.cpp"
	"src/Siv3D/VideoWriter/SivVideoWriter.cpp"
	"src/Siv3D/Wave/SivWave.cpp"
	"src/Siv3D/Webcam/SivWebcam.cpp"
	"src/Siv3D/Webcam/WebcamDetail.cpp"
	"src/Siv3D/Window/WindowFactory.cpp"
	"src/Siv3D/Window/SivWindow.cpp"
	"src/Siv3D/WritableMemoryMapping/SivWritableMemoryMapping.cpp"
	"src/Siv3D/XInput/SivXInput.cpp"
	"src/Siv3D/XInput/XInputFactory.cpp"
	"src/Siv3D/XMLReader/SivXMLReader.cpp"
	"src/Siv3D/XXHash/SivXXHash.cpp"
	"src/Siv3D/ZIPReader/SivZIPReader.cpp"
	"src/Siv3D/ZIPReader/ZIPReaderDetail.cpp"
	"src/Siv3D/Zlib/SivZlib.cpp"
)

set(SOURCE_FILES_THIRD_PARTY
	"src/ThirdParty/angelscript/as_atomic.cpp"
	"src/ThirdParty/angelscript/as_builder.cpp"
	"src/ThirdParty/angelscript/as_bytecode.cpp"
	"src/ThirdParty/angelscript/as_callfunc.cpp"
	"src/ThirdParty/angelscript/as_callfunc_x64_gcc.cpp"
	"src/ThirdParty/angelscript/as_compiler.cpp"
	"src/ThirdParty/angelscript/as_configgroup.cpp"
	"src/ThirdParty/angelscript/as_context.cpp"
	"src/ThirdParty/angelscript/as_datatype.cpp"
	"src/ThirdParty/angelscript/as_gc.cpp"
	"src/ThirdParty/angelscript/as_generic.cpp"
	"src/ThirdParty/angelscript/as_globalproperty.cpp"
	"src/ThirdParty/angelscript/as_memory.cpp"
	"src/ThirdParty/angelscript/as_module.cpp"
	"src/ThirdParty/angelscript/as_objecttype.cpp"
	"src/ThirdParty/angelscript/as_outputbuffer.cpp"
	"src/ThirdParty/angelscript/as_parser.cpp"
	"src/ThirdParty/angelscript/as_restore.cpp"
	"src/ThirdParty/angelscript/as_scriptcode.cpp"
	"src/ThirdParty/angelscript/as_scriptengine.cpp"
	"src/ThirdParty/angelscript/as_scriptfunction.cpp"
	"src/ThirdParty/angelscript/as_scriptnode.cpp"
	"src/ThirdParty/angelscript/as_scriptobject.cpp"
	"src/ThirdParty/angelscript/as_string.cpp"
	"src/ThirdParty/angelscript/as_string_util.cpp"
	"src/ThirdParty/angelscript/as_thread.cpp"
	"src/ThirdParty/angelscript/as_tokenizer.cpp"
	"src/ThirdParty/angelscript/as_typeinfo.cpp"
	"src/ThirdParty/angelscript/as_variablescope.cpp"
	"src/ThirdParty/Box2D/Collision/Shapes/b2ChainShape.cpp"
	"src/ThirdParty/Box2D/Collision/Shapes/b2CircleShape.cpp"
	"src/ThirdParty/Box2D/Collision/Shapes/b2EdgeShape.cpp"
	"src/ThirdParty/Box2D/Collision/Shapes/b2PolygonShape.cpp"
	"src/ThirdParty/Box2D/Collision/b2BroadPhase.cpp"
	"src/ThirdParty/Box2D/Collision/b2CollideCircle.cpp"
	"src/ThirdParty/Box2D/Collision/b2CollideEdge.cpp"
	"src/ThirdParty/Box2D/Collision/b2CollidePolygon.cpp"
	"src/ThirdParty/Box2D/Collision/b2Collision.cpp"
	"src/ThirdParty/Box2D/Collision/b2Distance.cpp"
	"src/ThirdParty/Box2D/Collision/b2DynamicTree.cpp"
	"src/ThirdParty/Box2D/Collision/b2TimeOfImpact.cpp"
	"src/ThirdParty/Box2D/Common/b2BlockAllocator.cpp"
	"src/ThirdParty/Box2D/Common/b2Draw.cpp"
	"src/ThirdParty/Box2D/Common/b2Math.cpp"
	"src/ThirdParty/Box2D/Common/b2Settings.cpp"
	"src/ThirdParty/Box2D/Common/b2StackAllocator.cpp"
	"src/ThirdParty/Box2D/Common/b2Timer.cpp"
	"src/ThirdParty/Box2D/Dynamics/Contacts/b2ChainAndCircleContact.cpp"
	"src/ThirdParty/Box2D/Dynamics/Contacts/b2ChainAndPolygonContact.cpp"
	"src/ThirdParty/Box2D/Dynamics/Contacts/b2CircleContact.cpp"
	"src/ThirdParty/Box2D/Dynamics/Contacts/b2Contact.cpp"
	"src/ThirdParty/Box2D/Dynamics/Contacts/b2ContactSolver.cpp"
	"src/ThirdParty/Box2D/Dynamics/Contacts/b2EdgeAndCircleContact.cpp"
	"src/ThirdParty/Box2D/Dynamics/Contacts/b2EdgeAndPolygonContact.cpp"
	"src/ThirdParty/Box2D/Dynamics/Contacts/b2PolygonAndCircleContact.cpp"
	"src/ThirdParty/Box2D/Dynamics/Contacts/b2PolygonContact.cpp"
	"src/ThirdParty/Box2D/Dynamics/Joints/b2DistanceJoint.cpp"
	"src/ThirdParty/Box2D/Dynamics/Joints/b2FrictionJoint.cpp"
	"src/ThirdParty/Box2D/Dynamics/Joints/b2GearJoint.cpp"
	"src/ThirdParty/Box2D/Dynamics/Joints/b2Joint.cpp"
	"src/ThirdParty/Box2D/Dynamics/Joints/b2MotorJoint.cpp"
	"src/ThirdParty/Box2D/Dynamics/Joints/b2MouseJoint.cpp"
	"src/ThirdParty/Box2D/Dynamics/Joints/b2PrismaticJoint.cpp"
	"src/ThirdParty/Box2D/Dynamics/Joints/b2PulleyJoint.cpp"
	"src/ThirdParty/Box2D/Dynamics/Joints/b2RevoluteJoint.cpp"
	"src/ThirdParty/Box2D/Dynamics/Joints/b2RopeJoint.cpp"
	"src/ThirdParty/Box2D/Dynamics/Joints/b2WeldJoint.cpp"
	"src/ThirdParty/Box2D/Dynamics/Joints/b2WheelJoint.cpp"
	"src/ThirdParty/Box2D/Dynamics/b2Body.cpp"
	"src/ThirdParty/Box2D/Dynamics/b2ContactManager.cpp"
	"src/ThirdParty/Box2D/Dynamics/b2Fixture.cpp"
	"src/ThirdParty/Box2D/Dynamics/b2Island.cpp"
	"src/ThirdParty/Box2D/Dynamics/b2World.cpp"
	"src/ThirdParty/Box2D/Dynamics/b2WorldCallbacks.cpp"
	"src/ThirdParty/Box2D/Rope/b2Rope.cpp"
	"src/ThirdParty/FID/FID.cpp"
	"src/ThirdParty/FastNoiseSIMD/FastNoiseSIMD.cpp"
	"src/ThirdParty/FastNoiseSIMD/FastNoiseSIMD_avx2.cpp"
	"src/ThirdParty/FastNoiseSIMD/FastNoiseSIMD_avx512.cpp"
	"src/ThirdParty/FastNoiseSIMD/FastNoiseSIMD_internal.cpp"
	"src/ThirdParty/FastNoiseSIMD/FastNoiseSIMD_neon.cpp"
	"src/ThirdParty/FastNoiseSIMD/FastNoiseSIMD_sse2.cpp"
	"src/ThirdParty/FastNoiseSIMD/FastNoiseSIMD_sse41.cpp"
	"src/ThirdParty/FeatureDetector/cpu_x86.cpp"
	"src/ThirdParty/QRCode/qrcode.cpp"
	"src/ThirdParty/RecastDetour/DetourAlloc.cpp"
	"src/ThirdParty/RecastDetour/DetourAssert.cpp"
	"src/ThirdParty/RecastDetour/DetourCommon.cpp"
	"src/ThirdParty/RecastDetour/DetourNavMesh.cpp"
	"src/ThirdParty/RecastDetour/DetourNavMeshBuilder.cpp"
	"src/ThirdParty/RecastDetour/DetourNavMeshQuery.cpp"
	"src/ThirdParty/RecastDetour/DetourNode.cpp"
	"src/ThirdParty/RecastDetour/Recast.cpp"
	"src/ThirdParty/RecastDetour/RecastAlloc.cpp"
	"src/ThirdParty/RecastDetour/RecastArea.cpp"
	"src/ThirdParty/RecastDetour/RecastAssert.cpp"
	"src/ThirdParty/RecastDetour/RecastContour.cpp"
	"src/ThirdParty/RecastDetour/RecastFilter.cpp"
	"src/ThirdParty/RecastDetour/RecastLayers.cpp"
	"src/ThirdParty/RecastDetour/RecastMesh.cpp"
	"src/ThirdParty/RecastDetour/RecastMeshDetail.cpp"
	"src/ThirdParty/RecastDetour/RecastRasterization.cpp"
	"src/ThirdParty/RecastDetour/RecastRegion.cpp"
	"src/ThirdParty/double-conversion/bignum-dtoa.cc"
	"src/ThirdParty/double-conversion/bignum.cc"
	"src/ThirdParty/double-conversion/cached-powers.cc"
	"src/ThirdParty/double-conversion/diy-fp.cc"
	"src/ThirdParty/double-conversion/double-conversion.cc"
	"src/ThirdParty/double-conversion/fast-dtoa.cc"
	"src/ThirdParty/double-conversion/fixed-dtoa.cc"
	"src/ThirdParty/double-conversion/strtod.cc"
	"src/ThirdParty/easyexif/exif.cpp"
	"src/ThirdParty/fmt/format.cc"
	#"src/ThirdParty/giflib/dgif_lib.c"
	#"src/ThirdParty/giflib/egif_lib.c"
	#"src/ThirdParty/giflib/gif_err.c"
	#"src/ThirdParty/giflib/gif_font.c"
	#"src/ThirdParty/giflib/gif_hash.c"
	#"src/ThirdParty/giflib/gif_quantize.c"
	#"src/ThirdParty/giflib/gifalloc.c"
	#"src/ThirdParty/giflib/openbsd-reallocarray.c"
	"src/ThirdParty/libsvm/svm.cpp"
	"src/ThirdParty/minizip/aescrypt.c"
	"src/ThirdParty/minizip/aeskey.c"
	"src/ThirdParty/minizip/aestab.c"
	"src/ThirdParty/minizip/hmac.c"
	"src/ThirdParty/minizip/sha1.c"
	"src/ThirdParty/minizip/sha2.c"
	"src/ThirdParty/minizip/mz_compat.c"
	"src/ThirdParty/minizip/mz_crypt.c"
	"src/ThirdParty/minizip/mz_crypt_brg.c"
	"src/ThirdParty/minizip/mz_os.c"
	"src/ThirdParty/minizip/mz_os_posix.c"
	"src/ThirdParty/minizip/mz_strm.c"
	"src/ThirdParty/minizip/mz_strm_buf.c"
	"src/ThirdParty/minizip/mz_strm_mem.c"
	"src/ThirdParty/minizip/mz_strm_os_posix.c"
	"src/ThirdParty/minizip/mz_strm_pkcrypt.c"
	"src/ThirdParty/minizip/mz_strm_split.c"
	"src/ThirdParty/minizip/mz_strm_wzaes.c"
	"src/ThirdParty/minizip/mz_strm_zlib.c"
	"src/ThirdParty/minizip/mz_zip.c"
	"src/ThirdParty/minizip/mz_zip_rw.c"
	"src/ThirdParty/msdf/core/Bitmap.cpp"
	"src/ThirdParty/msdf/core/Contour.cpp"
	"src/ThirdParty/msdf/core/EdgeHolder.cpp"
	"src/ThirdParty/msdf/core/Shape.cpp"
	"src/ThirdParty/msdf/core/SignedDistance.cpp"
	"src/ThirdParty/msdf/core/Vector2.cpp"
	"src/ThirdParty/msdf/core/edge-coloring.cpp"
	"src/ThirdParty/msdf/core/edge-segments.cpp"
	"src/ThirdParty/msdf/core/equation-solver.cpp"
	"src/ThirdParty/msdf/core/msdfgen.cpp"
	"src/ThirdParty/msdf/core/render-sdf.cpp"
	"src/ThirdParty/msdf/core/save-bmp.cpp"
	"src/ThirdParty/msdf/core/shape-description.cpp"
	"src/ThirdParty/msdf/ext/import-font.cpp"
	"src/ThirdParty/muparser/muParser.cpp"
	"src/ThirdParty/muparser/muParserBase.cpp"
	"src/ThirdParty/muparser/muParserBytecode.cpp"
	"src/ThirdParty/muparser/muParserCallback.cpp"
	"src/ThirdParty/muparser/muParserDLL.cpp"
	"src/ThirdParty/muparser/muParserError.cpp"
	"src/ThirdParty/muparser/muParserInt.cpp"
	"src/ThirdParty/muparser/muParserTokenReader.cpp"
	"src/ThirdParty/pffft/pffft.c"
	"src/ThirdParty/quirc/decode.c"
	"src/ThirdParty/quirc/identify.c"
	"src/ThirdParty/quirc/quirc.c"
	"src/ThirdParty/quirc/version_db.c"
	"src/ThirdParty/serial/list_ports_linux.cc"
	"src/ThirdParty/serial/serial.cc"
	"src/ThirdParty/serial/unix.cc"
	"src/ThirdParty/tinyxml/tinyxml2.cpp"
	"src/ThirdParty/tsl/hopscotch_growth_policy.cpp"
	"src/ThirdParty/zstd/common/debug.c"
	"src/ThirdParty/zstd/common/entropy_common.c"
	"src/ThirdParty/zstd/common/error_private.c"
	"src/ThirdParty/zstd/common/fse_decompress.c"
	"src/ThirdParty/zstd/common/pool.c"
	"src/ThirdParty/zstd/common/threading.c"
	"src/ThirdParty/zstd/common/xxhash.c"
	"src/ThirdParty/zstd/common/zstd_common.c"
	"src/ThirdParty/zstd/compress/fse_compress.c"
	"src/ThirdParty/zstd/compress/hist.c"
	"src/ThirdParty/zstd/compress/huf_compress.c"
	"src/ThirdParty/zstd/compress/zstd_compress.c"
	"src/ThirdParty/zstd/compress/zstd_compress_literals.c"
	"src/ThirdParty/zstd/compress/zstd_compress_sequences.c"
	"src/ThirdParty/zstd/compress/zstd_double_fast.c"
	"src/ThirdParty/zstd/compress/zstd_fast.c"
	"src/ThirdParty/zstd/compress/zstd_lazy.c"
	"src/ThirdParty/zstd/compress/zstd_ldm.c"
	"src/ThirdParty/zstd/compress/zstd_opt.c"
	"src/ThirdParty/zstd/compress/zstdmt_compress.c"
	"src/ThirdParty/zstd/decompress/huf_decompress.c"
	"src/ThirdParty/zstd/decompress/zstd_ddict.c"
	"src/ThirdParty/zstd/decompress/zstd_decompress.c"
	"src/ThirdParty/zstd/decompress/zstd_decompress_block.c"
	"src/ThirdParty/zstd/dictBuilder/cover.c"
	"src/ThirdParty/zstd/dictBuilder/divsufsort.c"
	"src/ThirdParty/zstd/dictBuilder/fastcover.c"
	"src/ThirdParty/zstd/dictBuilder/zdict.c"
	"src/ThirdParty/GLFW/context.c"
	"src/ThirdParty/GLFW/egl_context.c"
	"src/ThirdParty/GLFW/init.c"
	"src/ThirdParty/GLFW/input.c"
	"src/ThirdParty/GLFW/monitor.c"
	"src/ThirdParty/GLFW/posix_thread.c"
	"src/ThirdParty/GLFW/vulkan.c"
	"src/ThirdParty/GLFW/window.c"
	"src/ThirdParty/GLFW/glx_context.c"
	"src/ThirdParty/GLFW/osmesa_context.c"
	"src/ThirdParty/GLFW/linux_joystick.c"
	"src/ThirdParty/GLFW/posix_time.c"
	"src/ThirdParty/GLFW/x11_init.c"
	"src/ThirdParty/GLFW/x11_monitor.c"
	"src/ThirdParty/GLFW/x11_window.c"
	"src/ThirdParty/GLFW/xkb_unicode.c"
	"src/ThirdParty/RtAudio/RtAudio.cpp")

if(WIN32)
	set(SOURCE_FILES_PLATFORM
		"src/Siv3D-Platform/WindowsDesktop/Siv3DMain.cpp"

		"src/Siv3D-Platform/WindowsDesktop/Audio/AudioFactory.cpp"
		"src/Siv3D-Platform/WindowsDesktop/Audio/X27/Audio_X27.cpp"
		"src/Siv3D-Platform/WindowsDesktop/Audio/X27/CAudio_X27.cpp"
		"src/Siv3D-Platform/WindowsDesktop/Audio/X28/Audio_X28.cpp"
		"src/Siv3D-Platform/WindowsDesktop/Audio/X28/CAudio_X28.cpp"
		"src/Siv3D-Platform/WindowsDesktop/AudioFormat/AAC/AudioFormat_AAC.cpp"
		"src/Siv3D-Platform/WindowsDesktop/AudioFormat/MP3/AudioFormat_MP3.cpp"
		"src/Siv3D-Platform/WindowsDesktop/BinaryReader/BinaryReaderDetail.cpp"
		"src/Siv3D-Platform/WindowsDesktop/BinaryWriter/BinaryWriterDetail.cpp"
		"src/Siv3D-Platform/WindowsDesktop/ByteArray/ByteArrayDetail_Platform.cpp"
		"src/Siv3D-Platform/WindowsDesktop/Clipboard/CClipboard.cpp"
		"src/Siv3D-Platform/WindowsDesktop/Codec/CCodec.cpp"
		"src/Siv3D-Platform/WindowsDesktop/Console/CConsole.cpp"
		"src/Siv3D-Platform/WindowsDesktop/ConstantBuffer/D3D11/D3D11ConstantBuffer.cpp"
		"src/Siv3D-Platform/WindowsDesktop/ConstantBuffer/SivConstantBuffer.cpp"
		"src/Siv3D-Platform/WindowsDesktop/Cursor/CCursor.cpp"
		"src/Siv3D-Platform/WindowsDesktop/Date/SivDate_Platform.cpp"
		"src/Siv3D-Platform/WindowsDesktop/DateTime/SivDateTime_Platform.cpp"
		"src/Siv3D-Platform/WindowsDesktop/Dialog/SivDialog_Platform.cpp"
		"src/Siv3D-Platform/WindowsDesktop/DirectoryWatcher/DirectoryWatcherDetail.cpp"
		"src/Siv3D-Platform/WindowsDesktop/DLL/SivDLL.cpp"
		"src/Siv3D-Platform/WindowsDesktop/DragDrop/CDragDrop.cpp"
		"src/Siv3D-Platform/WindowsDesktop/EngineLog/SivEngineLog.cpp"
		"src/Siv3D-Platform/WindowsDesktop/EngineMessageBox/SivEngineMessageBox.cpp"
		"src/Siv3D-Platform/WindowsDesktop/FileSystem/SivFileSystem_Platform.cpp"
		"src/Siv3D-Platform/WindowsDesktop/Gamepad/CGamepad.cpp"
		"src/Siv3D-Platform/WindowsDesktop/Gamepad/SivGamepad_Platform.cpp"
		"src/Siv3D-Platform/WindowsDesktop/Graphics/D3D11/CGraphics_D3D11.cpp"
		"src/Siv3D-Platform/WindowsDesktop/Graphics/D3D11/D3D11BlendState.cpp"
		"src/Siv3D-Platform/WindowsDesktop/Graphics/D3D11/D3D11DepthStencilState.cpp"
		"src/Siv3D-Platform/WindowsDesktop/Graphics/D3D11/D3D11Device.cpp"
		"src/Siv3D-Platform/WindowsDesktop/Graphics/D3D11/D3D11RasterizerState.cpp"
		"src/Siv3D-Platform/WindowsDesktop/Graphics/D3D11/D3D11RenderTarget.cpp"
		"src/Siv3D-Platform/WindowsDesktop/Graphics/D3D11/D3D11SamplerState.cpp"
		"src/Siv3D-Platform/WindowsDesktop/Graphics/D3D11/D3D11ScreenCapture.cpp"
		"src/Siv3D-Platform/WindowsDesktop/Graphics/D3D11/D3D11SwapChain.cpp"
		"src/Siv3D-Platform/WindowsDesktop/Graphics/GraphicsFactory.cpp"
		"src/Siv3D-Platform/WindowsDesktop/Graphics/SivGraphics_Platform.cpp"
		"src/Siv3D-Platform/WindowsDesktop/Keyboard/CKeyboard.cpp"
		"src/Siv3D-Platform/WindowsDesktop/Logger/CLogger.cpp"
		"src/Siv3D-Platform/WindowsDesktop/MemoryMapping/MemoryMappingDetail.cpp"
		"src/Siv3D-Platform/WindowsDesktop/MessageBox/SivMessageBox.cpp"
		"src/Siv3D-Platform/WindowsDesktop/Microphone/MicrophoneDetail.cpp"
		"src/Siv3D-Platform/WindowsDesktop/Monitor/SivMonitor.cpp"
		"src/Siv3D-Platform/WindowsDesktop/Mouse/CMouse.cpp"
		"src/Siv3D-Platform/WindowsDesktop/Network/CNetwork.cpp"
		"src/Siv3D-Platform/WindowsDesktop/NLP/SivNLP_Japanese.cpp"
		"src/Siv3D-Platform/WindowsDesktop/PowerStatus/SivPowerStatus.cpp"
		"src/Siv3D-Platform/WindowsDesktop/Process/ChildProcessDetail.cpp"
		"src/Siv3D-Platform/WindowsDesktop/Renderer2D/D3D11/CRenderer2D_D3D11.cpp"
		"src/Siv3D-Platform/WindowsDesktop/Renderer2D/D3D11/D3D11Renderer2DCommand.cpp"
		"src/Siv3D-Platform/WindowsDesktop/Renderer2D/D3D11/D3D11SpriteBatch.cpp"
		"src/Siv3D-Platform/WindowsDesktop/Renderer2D/Renderer2DFactory.cpp"
		"src/Siv3D-Platform/WindowsDesktop/Resource/SivResource.cpp"
		"src/Siv3D-Platform/WindowsDesktop/ScreenCapture/CScreenCapture_Platform.cpp"
		"src/Siv3D-Platform/WindowsDesktop/Shader/D3D11/CShader_D3D11.cpp"
		"src/Siv3D-Platform/WindowsDesktop/Shader/D3D11/PixelShader_D3D11.cpp"
		"src/Siv3D-Platform/WindowsDesktop/Shader/D3D11/VertexShader_D3D11.cpp"
		"src/Siv3D-Platform/WindowsDesktop/Shader/ShaderFactory.cpp"
		"src/Siv3D-Platform/WindowsDesktop/Shader/SivShader_Platform.cpp"
		"src/Siv3D-Platform/WindowsDesktop/System/CSystem.cpp"
		"src/Siv3D-Platform/WindowsDesktop/System/SivSystem_Platform.cpp"
		"src/Siv3D-Platform/WindowsDesktop/TextInput/CTextInput.cpp"
		"src/Siv3D-Platform/WindowsDesktop/TextInput/WindowsIME.cpp"
		"src/Siv3D-Platform/WindowsDesktop/TextReader/TextReaderDetail_Platform.cpp"
		"src/Siv3D-Platform/WindowsDesktop/TextToSpeech/CTextToSpeech.cpp"
		"src/Siv3D-Platform/WindowsDesktop/Texture/D3D11/CTexture_D3D11.cpp"
		"src/Siv3D-Platform/WindowsDesktop/Texture/D3D11/Texture2DDesc_D3D11.cpp"
		"src/Siv3D-Platform/WindowsDesktop/Texture/D3D11/Texture_D3D11.cpp"
		"src/Siv3D-Platform/WindowsDesktop/Texture/TextureFactory.cpp"
		"src/Siv3D-Platform/WindowsDesktop/Time/SivTime.cpp"
		"src/Siv3D-Platform/WindowsDesktop/ToastNotification/CToastNotification.cpp"
		"src/Siv3D-Platform/WindowsDesktop/ToastNotification/ToastNotificationFactory.cpp"
		"src/Siv3D-Platform/WindowsDesktop/Unicode/SivUnicode_Platform.cpp"
		"src/Siv3D-Platform/WindowsDesktop/VideoWriter/VideoWriterDetail.cpp"
		"src/Siv3D-Platform/WindowsDesktop/Webcam/SivWebcam_Platform.cpp"
		"src/Siv3D-Platform/WindowsDesktop/Window/CWindow.cpp"
		"src/Siv3D-Platform/WindowsDesktop/Window/HighDPI.cpp"
		"src/Siv3D-Platform/WindowsDesktop/Window/WindowProc.cpp"
		"src/Siv3D-Platform/WindowsDesktop/WritableMemoryMapping/WritableMemoryMappingDetail.cpp"
		"src/Siv3D-Platform/WindowsDesktop/XInput/CXInput.cpp")
elseif(APPLE)
	set(SOURCE_FILES_PLATFORM
		"src/Siv3D-Platform/macOS/Siv3DMain.cpp"

		"src/Siv3D-Platform/macOS/Audio/AL/CAudio_AL.cpp"
		"src/Siv3D-Platform/macOS/Audio/AudioFactory.cpp"
		"src/Siv3D-Platform/macOS/AudioFormat/AAC/AudioFormat_AAC.cpp"
		"src/Siv3D-Platform/macOS/AudioFormat/MP3/AudioFormat_MP3.cpp"
		"src/Siv3D-Platform/macOS/BinaryReader/BinaryReaderDetail.cpp"
		"src/Siv3D-Platform/macOS/BinaryWriter/BinaryWriterDetail.cpp"
		"src/Siv3D-Platform/macOS/ByteArray/ByteArrayDetail_Platform.cpp"
		"src/Siv3D-Platform/macOS/Codec/CCodec.cpp"
		"src/Siv3D-Platform/macOS/Console/CConsole.cpp"
		"src/Siv3D-Platform/macOS/ConstantBuffer/GL/GLConstantBuffer.cpp"
		"src/Siv3D-Platform/macOS/ConstantBuffer/SivConstantBuffer.cpp"
		"src/Siv3D-Platform/macOS/Date/SivDate_Platform.cpp"
		"src/Siv3D-Platform/macOS/DateTime/SivDateTime_Platform.cpp"
		"src/Siv3D-Platform/macOS/DirectoryWatcher/DirectoryWatcherDetail.cpp"
		"src/Siv3D-Platform/macOS/DLL/SivDLL.cpp"
		"src/Siv3D-Platform/macOS/DragDrop/CDragDrop.cpp"
		"src/Siv3D-Platform/macOS/EngineLog/SivEngineLog.cpp"
		"src/Siv3D-Platform/macOS/EngineMessageBox/SivEngineMessageBox.cpp"
		"src/Siv3D-Platform/macOS/Gamepad/CGamepad.cpp"
		"src/Siv3D-Platform/macOS/Gamepad/SivGamepad_Platform.cpp"
		"src/Siv3D-Platform/macOS/Graphics/GL/BlendState/GLBlendState.cpp"
		"src/Siv3D-Platform/macOS/Graphics/GL/CGraphics_GL.cpp"
		"src/Siv3D-Platform/macOS/Graphics/GL/RasterizerState/GLRasterizerState.cpp"
		"src/Siv3D-Platform/macOS/Graphics/GL/SamplerState/GLSamplerState.cpp"
		"src/Siv3D-Platform/macOS/Graphics/GL/SceneTexture.cpp"
		"src/Siv3D-Platform/macOS/Graphics/GraphicsFactory.cpp"
		"src/Siv3D-Platform/macOS/Graphics/SivGraphics_Platform.cpp"
		"src/Siv3D-Platform/macOS/Keyboard/CKeyboard.cpp"
		"src/Siv3D-Platform/macOS/Logger/CLogger.cpp"
		"src/Siv3D-Platform/macOS/MemoryMapping/MemoryMappingDetail.cpp"
		"src/Siv3D-Platform/macOS/Microphone/MicrophoneDetail.cpp"
		"src/Siv3D-Platform/macOS/Monitor/SivMonitor.cpp"
		"src/Siv3D-Platform/macOS/Mouse/CMouse.cpp"
		"src/Siv3D-Platform/macOS/Network/CNetwork.cpp"
		"src/Siv3D-Platform/macOS/NLP/SivNLP_Japanese.cpp"
		"src/Siv3D-Platform/macOS/Renderer2D/GL/CRenderer2D_GL.cpp"
		"src/Siv3D-Platform/macOS/Renderer2D/GL/GLRenderer2DCommand.cpp"
		"src/Siv3D-Platform/macOS/Renderer2D/GL/GLSpriteBatch.cpp"
		"src/Siv3D-Platform/macOS/Renderer2D/Renderer2DFactory.cpp"
		"src/Siv3D-Platform/macOS/Resource/SivResource.cpp"
		"src/Siv3D-Platform/macOS/ScreenCapture/CScreenCapture_Platform.cpp"
		"src/Siv3D-Platform/macOS/Shader/GL/CShader_GL.cpp"
		"src/Siv3D-Platform/macOS/Shader/GL/PixelShader_GL.cpp"
		"src/Siv3D-Platform/macOS/Shader/GL/VertexShader_GL.cpp"
		"src/Siv3D-Platform/macOS/Shader/ShaderFactory.cpp"
		"src/Siv3D-Platform/macOS/System/CSystem.cpp"
		"src/Siv3D-Platform/macOS/TextInput/CTextInput.cpp"
		"src/Siv3D-Platform/macOS/Texture/GL/CTexture_GL.cpp"
		"src/Siv3D-Platform/macOS/Texture/GL/Texture_GL.cpp"
		"src/Siv3D-Platform/macOS/Texture/TextureFactory.cpp"
		"src/Siv3D-Platform/macOS/Time/SivTime.cpp"
		"src/Siv3D-Platform/macOS/ToastNotification/CToastNotification.cpp"
		"src/Siv3D-Platform/macOS/ToastNotification/ToastNotificationFactory.cpp"
		"src/Siv3D-Platform/macOS/Unicode/SivUnicode_Platform.cpp"
		"src/Siv3D-Platform/macOS/VideoWriter/VideoWriterDetail.cpp"
		"src/Siv3D-Platform/macOS/Window/CWindow.cpp"
		"src/Siv3D-Platform/macOS/WritableMemoryMapping/WritableMemoryMappingDetail.cpp"
		"src/Siv3D-Platform/macOS/XInput/CXInput.cpp"
		"src/Siv3D-Platform/macOS/PowerStatus/SivPowerStatus.mm"
		"src/Siv3D-Platform/macOS/MessageBox/SivMessageBox.mm"
		"src/Siv3D-Platform/macOS/Cursor/CCursor.mm"
		"src/Siv3D-Platform/macOS/Network/CNetwork.mm"
		"src/Siv3D-Platform/macOS/FileSystem/SivFileSystem_Platform.mm"
		"src/Siv3D-Platform/macOS/Dialog/SivDialog_Platform.mm"
		"src/Siv3D-Platform/macOS/TextReader/TextReaderDetail_Platform.mm"
		"src/Siv3D-Platform/macOS/System/SivSystem_Platform.mm"
		"src/Siv3D-Platform/macOS/TextToSpeech/CTextToSpeech.mm"
		"src/Siv3D-Platform/macOS/TextToSpeech/TextToSpeechDetail.mm"
		"src/Siv3D-Platform/macOS/TextToSpeech/TTS.mm"
		"src/Siv3D-Platform/macOS/Webcam/SivWebcam_Platform.mm"
		"src/Siv3D-Platform/macOS/Process/NSTaskWrapper.mm"
		"src/Siv3D-Platform/macOS/Process/ChildProcessDetail.mm"
		"src/Siv3D-Platform/macOS/Clipboard/CClipboard.mm")
elseif(UNIX)
	set(SOURCE_FILES_PLATFORM
		"src/Siv3D-Platform/Linux/Siv3DMain.cpp"

		"src/Siv3D-Platform/Linux/Audio/AL/CAudio_AL.cpp"
		"src/Siv3D-Platform/Linux/Audio/AudioFactory.cpp"
		"src/Siv3D-Platform/Linux/AudioFormat/AAC/AudioFormat_AAC.cpp"
		"src/Siv3D-Platform/Linux/AudioFormat/MP3/AudioFormat_MP3.cpp"
		"src/Siv3D-Platform/Linux/BinaryReader/BinaryReaderDetail.cpp"
		"src/Siv3D-Platform/Linux/BinaryWriter/BinaryWriterDetail.cpp"
		"src/Siv3D-Platform/Linux/ByteArray/ByteArrayDetail_Platform.cpp"
		"src/Siv3D-Platform/Linux/Clipboard/CClipboard.cpp"
		"src/Siv3D-Platform/Linux/Codec/CCodec.cpp"
		"src/Siv3D-Platform/Linux/Console/CConsole.cpp"
		"src/Siv3D-Platform/Linux/ConstantBuffer/GL/GLConstantBuffer.cpp"
		"src/Siv3D-Platform/Linux/ConstantBuffer/SivConstantBuffer.cpp"
		"src/Siv3D-Platform/Linux/Cursor/CCursor.cpp"
		"src/Siv3D-Platform/Linux/DLL/SivDLL.cpp"
		"src/Siv3D-Platform/Linux/Date/SivDate_Platform.cpp"
		"src/Siv3D-Platform/Linux/DateTime/SivDateTime_Platform.cpp"
		"src/Siv3D-Platform/Linux/Dialog/SivDialog_Platform.cpp"
		"src/Siv3D-Platform/Linux/DirectoryWatcher/DirectoryWatcherDetail.cpp"
		"src/Siv3D-Platform/Linux/DragDrop/CDragDrop.cpp"
		"src/Siv3D-Platform/Linux/EngineLog/SivEngineLog.cpp"
		"src/Siv3D-Platform/Linux/EngineMessageBox/SivEngineMessageBox.cpp"
		"src/Siv3D-Platform/Linux/FileSystem/SivFileSystem_Platform.cpp"
		"src/Siv3D-Platform/Linux/Gamepad/CGamepad.cpp"
		"src/Siv3D-Platform/Linux/Gamepad/SivGamepad_Platform.cpp"
		"src/Siv3D-Platform/Linux/Graphics/GL/BlendState/GLBlendState.cpp"
		"src/Siv3D-Platform/Linux/Graphics/GL/CGraphics_GL.cpp"
		"src/Siv3D-Platform/Linux/Graphics/GL/RasterizerState/GLRasterizerState.cpp"
		"src/Siv3D-Platform/Linux/Graphics/GL/SamplerState/GLSamplerState.cpp"
		"src/Siv3D-Platform/Linux/Graphics/GL/SceneTexture.cpp"
		"src/Siv3D-Platform/Linux/Graphics/GraphicsFactory.cpp"
		"src/Siv3D-Platform/Linux/Graphics/SivGraphics_Platform.cpp"
		"src/Siv3D-Platform/Linux/Keyboard/CKeyboard.cpp"
		"src/Siv3D-Platform/Linux/Logger/CLogger.cpp"
		"src/Siv3D-Platform/Linux/MemoryMapping/MemoryMappingDetail.cpp"
		"src/Siv3D-Platform/Linux/MessageBox/SivMessageBox.cpp"
		"src/Siv3D-Platform/Linux/Microphone/MicrophoneDetail.cpp"
		"src/Siv3D-Platform/Linux/Monitor/SivMonitor.cpp"
		"src/Siv3D-Platform/Linux/Mouse/CMouse.cpp"
		"src/Siv3D-Platform/Linux/NLP/SivNLP_Japanese.cpp"
		"src/Siv3D-Platform/Linux/Network/CNetwork.cpp"
		"src/Siv3D-Platform/Linux/PowerStatus/SivPowerStatus.cpp"
		"src/Siv3D-Platform/Linux/Process/ChildProcessDetail.cpp"
		"src/Siv3D-Platform/Linux/Renderer2D/GL/CRenderer2D_GL.cpp"
		"src/Siv3D-Platform/Linux/Renderer2D/GL/GLRenderer2DCommand.cpp"
		"src/Siv3D-Platform/Linux/Renderer2D/GL/GLSpriteBatch.cpp"
		"src/Siv3D-Platform/Linux/Renderer2D/Renderer2DFactory.cpp"
		"src/Siv3D-Platform/Linux/Resource/SivResource.cpp"
		"src/Siv3D-Platform/Linux/ScreenCapture/CScreenCapture_Platform.cpp"
		"src/Siv3D-Platform/Linux/Shader/GL/CShader_GL.cpp"
		"src/Siv3D-Platform/Linux/Shader/GL/PixelShader_GL.cpp"
		"src/Siv3D-Platform/Linux/Shader/GL/VertexShader_GL.cpp"
		"src/Siv3D-Platform/Linux/Shader/ShaderFactory.cpp"
		"src/Siv3D-Platform/Linux/Siv3DMain.cpp"
		"src/Siv3D-Platform/Linux/System/CSystem.cpp"
		"src/Siv3D-Platform/Linux/System/SivSystem_Platform.cpp"
		"src/Siv3D-Platform/Linux/TextInput/CTextInput.cpp"
		"src/Siv3D-Platform/Linux/TextReader/TextReaderDetail_Platform.cpp"
		"src/Siv3D-Platform/Linux/TextToSpeech/CTextToSpeech.cpp"
		"src/Siv3D-Platform/Linux/Texture/GL/CTexture_GL.cpp"
		"src/Siv3D-Platform/Linux/Texture/GL/Texture_GL.cpp"
		"src/Siv3D-Platform/Linux/Texture/TextureFactory.cpp"
		"src/Siv3D-Platform/Linux/Time/SivTime.cpp"
		"src/Siv3D-Platform/Linux/ToastNotification/CToastNotification.cpp"
		"src/Siv3D-Platform/Linux/ToastNotification/ToastNotificationFactory.cpp"
		"src/Siv3D-Platform/Linux/Unicode/SivUnicode_Platform.cpp"
		"src/Siv3D-Platform/Linux/VideoWriter/VideoWriterDetail.cpp"
		"src/Siv3D-Platform/Linux/Window/CWindow.cpp"
		"src/Siv3D-Platform/Linux/WritableMemoryMapping/WritableMemoryMappingDetail.cpp"
		"src/Siv3D-Platform/Linux/XInput/CXInput.cpp")
endif()

# OSで分岐
if(WIN32)
	set(PLATFORM_DIR "WindowsDesktop")
elseif(APPLE)
	set(PLATFORM_DIR "macOS")
elseif(UNIX)
	set(PLATFORM_DIR "Linux")
	set(LINUX ON)
else()
	message(FATAL_ERROR "Unsupported OS")
endif()

if(LINUX)
	# Linux版のみサードパーティ製ライブラリをソースファイルからビルド
	set(SOURCE_FILES ${SOURCE_FILES_SIV3D} ${SOURCE_FILES_THIRD_PARTY} ${SOURCE_FILES_PLATFORM})
else()
	# Windows/Mac版はコンパイル済みライブラリを使用するためサードパーティ製ライブラリのソースファイルは除外
	set(SOURCE_FILES ${SOURCE_FILES_SIV3D} ${SOURCE_FILES_PLATFORM})
endif()

add_library(Siv3D STATIC ${SOURCE_FILES})

target_include_directories(Siv3D PRIVATE
	"/usr/include"

	"include"
	"src/Siv3D"
	"src/Siv3D-Platform/${PLATFORM_DIR}"
	"include/ThirdParty"
	"src/ThirdParty"

	"src/ThirdParty/asio"
	"src/ThirdParty/zstd"
	"src/ThirdParty/zstd/common"
	"src/ThirdParty/freetype"
)

if(LINUX)
	# Linux版は外部ライブラリをpkg-configで指定
	find_package(PkgConfig)
	pkg_check_modules(LIBSIV3D REQUIRED glib-2.0 gobject-2.0 gio-2.0 gl libpng libturbojpeg x11 xi xinerama xcursor xrandr gl glu freetype2 openal opencv4 ogg vorbis zlib)
	target_include_directories(Siv3D PRIVATE ${LIBSIV3D_INCLUDE_DIRS})
else()
	# Windows/Mac版はboostのインクルードパスを相対パスで指定
	# (Linux版はboostが環境へインストールされている前提かつヘッダのみ使用のため指定不要)
	target_include_directories(Siv3D PRIVATE "../Dependencies/boost_1_72_0")
endif()

if(MSVC)
	# Windows版(Visual Studio)
	target_compile_options(Siv3D PRIVATE /std:c++latest /W4 /utf-8)

	set(MSVC_DEFINES "/D_LIB /D_USE_MATH_DEFINES /DMUPARSER_STATIC /DMSDFGEN_USE_CPP11 /D_SILENCE_CXX17_RESULT_OF_DEPRECATION_WARNING /D_UNICODE /DUNICODE")

	set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /MT /DNDEBUG ${MSVC_DEFINES}")
	set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /MTd /D_DEBUG ${MSVC_DEFINES}")

	set(CMAKE_C_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /MT")
	set(CMAKE_C_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /MTd")
else()
	# Mac/Linux版
	if(APPLE)
		set(PLATFORM_FLAGS "-D__MACOSX_CORE__ -D_GLFW_COCOA")
	else()
		set(PLATFORM_FLAGS "-D_GLFW_X11")
	endif()

	set(CMAKE_CXX_FLAGS "-std=c++17 -Wall -Wextra -Wno-unknown-pragmas -fPIC -msse4.1 ${PLATFORM_FLAGS}")
	set(CMAKE_CXX_FLAGS_DEBUG "-g3 -O0 -pg -DDEBUG")
	set(CMAKE_CXX_FLAGS_RELEASE "-O2 -DNDEBUG -march=x86-64")
	set(CMAKE_CXX_FLAGS_RELWITHDEBINFO "-g3 -Og -pg")
	set(CMAKE_CXX_FLAGS_MINSIZEREL "-Os -DNDEBUG -march=x86-64")

	set(CMAKE_C_FLAGS "-Wall -Wextra -Wno-unknown-pragmas -fPIC ${PLATFORM_FLAGS}")
	set(CMAKE_C_FLAGS_DEBUG "-g3 -O0 -pg -DDEBUG")
	set(CMAKE_C_FLAGS_RELEASE "-O2 -DNDEBUG -march=x86-64")
	set(CMAKE_C_FLAGS_RELWITHDEBINFO "-g3 -Og -pg")
	set(CMAKE_C_FLAGS_MINSIZEREL "-Os -DNDEBUG -march=x86-64")
endif()

if(CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
	target_compile_options(Siv3D PRIVATE "-fcolor-diagnostics")
elseif(CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
	target_compile_options(Siv3D PRIVATE "-fdiagnostics-color=always")
endif()
